# MGraph-AI

./: README.md  pyproject.toml  requirements-test.txt
.github/actions/aws__deploy-lambda/: action.yml
.github/actions/install-graphviz/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
deploy/docker/mgraph-ai/: Dockerfile  docker-compose.yml  start.sh
deploy/lambdas/: Deploy_Lambda__MGraph_AI.py  test_Deploy_Lambda__MGraph_AI_Serverless.py
mgraph_ai/graphviz_mgraph_ai/: start-local-server.sh
mgraph_ai/graphviz_mgraph_ai/fastapi/: MGraph_AI_Serverless__Fast_API.py
mgraph_ai/graphviz_mgraph_ai/lambdas/: handler.py
mgraph_ai/utils/: Version.py
tests/unit/utils/: test_Version.py
