[tool.poetry]
name        = "mgraph_ai"
version     = "v0.13.0"
description = "MGraph-AI"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI"

[tool.poetry.dependencies]
python           = "^3.11"
osbot-utils      = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
